force-app/main/default/objects/Participant__c/fields/CertificationNumber__c.field-meta.xml
<CustomField>
    <fullName>CertificationNumber__c</fullName>
    <label>Certification Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>