force-app/main/default/objects/Participant__c/recordTypes/CompanyParticipant.recordType-meta.xml
<RecordType>
    <fullName>CompanyParticipant</fullName>
    <active>true</active>
    <label>Company Participant</label>
</RecordType>