force-app/main/default/objects/Participant__c/recordTypes/PersonalParticipant.recordType-meta.xml
<RecordType>
    <fullName>PersonalParticipant</fullName>
    <active>true</active>
    <label>Personal Participant</label>
</RecordType>